components/vault/vault-simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-simple
  namespace: vault
  labels:
    app.kubernetes.io/name: vault-simple
    app.kubernetes.io/part-of: platform
spec:
  type: ClusterIP
  ports:
  - port: 8200
    targetPort: http
    protocol: TCP
    name: http
  - port: 8201
    targetPort: https-internal
    protocol: TCP
    name: https-internal
  selector:
    app.kubernetes.io/name: vault-simple
